Работа над ошибкой #4. class InMemoryTaskManager